<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to ConnectCall"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/contactsButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/callHistoryButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/call_history"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_margin="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
